--- a/assets/skin/default_skin/css/validate.css
+++ b/assets/skin/default_skin/css/validate.css
@@ -44,7 +44,7 @@ body {
 hr {
     display: block;
     height: 1px;
-   /* border: 0;*/
+    /* border: 0;*/
     border-top: 1px solid #ccc;
     margin: 1em 0;
     padding: 0;
@@ -65,7 +65,7 @@ img {
 */
 
 fieldset {
-   /* border: 0;*/
+    /* border: 0;*/
     margin: 0;
     padding: 0;
 }
@@ -990,7 +990,7 @@ Wizard
     width: auto;
     margin: 0 0.5em 0.5em;
     padding: 5px;
-    font-size: 12px;
+    font-size: 13px;
     text-decoration: none;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
@@ -1259,30 +1259,30 @@ Tabcontrol
     position: relative;
 }
 
-#contact input[type="text"],
-#contact input[type="email"],
-#contact input[type="tel"],
-#contact input[type="url"],
-#contact textarea,
-#contact button[type="submit"] {
+#souscription-form input[type="text"],
+#souscription-form input[type="email"],
+#souscription-form input[type="tel"],
+#souscription-form input[type="url"],
+#souscription-form textarea,
+#souscription-form button[type="submit"] {
     font: 400 12px/16px "Titillium Web", Helvetica, Arial, sans-serif;
 }
 
-#contact {
+#souscription-form {
     background: #F9F9F9;
     padding: 25px;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
     height: 571px !important;
 }
 
-#contact h3 {
+#souscription-form h3 {
     display: block;
     font-size: 30px;
     font-weight: 300;
     margin-bottom: 10px;
 }
 
-#contact h4 {
+#souscription-form h4 {
     margin: 5px 0 15px;
     display: block;
     font-size: 13px;
@@ -1297,14 +1297,14 @@ fieldset {
     width: 100%;
 }
 
-#contact input[type="text"],
-#contact input[type="email"],
-#contact input[type="tel"],
-#contact input[type="url"],
-#contact input[type="number"],
-#contact input[type="date"] {
+#souscription-form input[type="text"],
+#souscription-form input[type="email"],
+#souscription-form input[type="tel"],
+#souscription-form input[type="url"],
+#souscription-form input[type="number"],
+#souscription-form input[type="date"] {
     width: 100%;
-    border: 1px solid rgba(22, 59, 102, 0.56);
+    border: 1px inset rgb(22, 59, 102);
     background: #FFF;
     margin: 0 0 5px !important;
     padding: 7px !important;
@@ -1326,7 +1326,7 @@ fieldset {
 
 .prime-sector img {
     width: 63%;
-    height: 163px;
+    height: 207px;
     position: absolute;
     margin: 13px 77px 0 172px;
 }
@@ -1429,26 +1429,26 @@ select {
     width: 99px !important;
 }*/
 
-#contact input[type="text"]:hover,
-#contact input[type="email"]:hover,
-#contact input[type="tel"]:hover,
-#contact input[type="url"]:hover,
-#contact input[type="number"]:hover,
-#contact input[type="date"]:hover,
-#contact textarea:hover {
+#souscription-form input[type="text"]:hover,
+#souscription-form input[type="email"]:hover,
+#souscription-form input[type="tel"]:hover,
+#souscription-form input[type="url"]:hover,
+#souscription-form input[type="number"]:hover,
+#souscription-form input[type="date"]:hover,
+#souscription-form textarea:hover {
     -webkit-transition: border-color 0.3s ease-in-out;
     -moz-transition: border-color 0.3s ease-in-out;
     transition: border-color 0.3s ease-in-out;
     border: 1px solid #aaa;
 }
 
-#contact textarea {
+#souscription-form textarea {
     height: 100px;
     max-width: 100%;
     resize: none;
 }
 
-#contact button[type="submit"] {
+#souscription-form button[type="submit"] {
     cursor: pointer;
     width: 100%;
     border: none;
@@ -1459,14 +1459,14 @@ select {
     font-size: 15px;
 }
 
-#contact button[type="submit"]:hover {
+#souscription-form button[type="submit"]:hover {
     background: #43A047;
     -webkit-transition: background 0.3s ease-in-out;
     -moz-transition: background 0.3s ease-in-out;
     transition: background-color 0.3s ease-in-out;
 }
 
-#contact button[type="submit"]:active {
+#souscription-form button[type="submit"]:active {
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
 }
 
@@ -1474,8 +1474,8 @@ select {
     text-align: center;
 }
 
-#contact input:focus,
-#contact textarea:focus {
+#souscription-form input:focus,
+#souscription-form textarea:focus {
     outline: 0;
     border: 1px solid #aaa;
 }
@@ -1513,4 +1513,19 @@ select {
 .container {
     min-height: 100vh;
     padding-top: 3%;
+}
+
+.total-input {
+    position: relative;
+    top: 159px;
+    /*margin: auto !important;*/
+    left: 233px !important;
+    width: 50% !important;
+    text-align: center;
+    background: #011221 !important;
+    border: none !important;
+    color: #d0a13b;
+    font-weight: bold;
+    font-size: 39px !important;
+    z-index: 1;
 }
