--- a/assets/skin/default_skin/css/validate.css
+++ b/assets/skin/default_skin/css/validate.css
@@ -15,8 +15,9 @@ body {
     color: red !important
 }
 
-.table-bordered {
-    border: 1px solid #163b66 !important;
+#avance-recours,
+#persones_trans {
+    width: 60% !important
 }
 
 
@@ -402,6 +403,8 @@ textarea {
 
 body {
     margin: 0;
+    background: #f2d19e;
+    overflow: hidden !important;
 }
 
 
@@ -1008,18 +1011,19 @@ Wizard
 .wizard>.steps .current a,
 .wizard>.steps .current a:hover,
 .wizard>.steps .current a:active {
-    background: #163b66;
-    color: #ecb137e6;
-    /* background: #fcfcfc;
-    color: #111;*/
+    background: #11243a;
+    color: #d19e4f;
+    font-weight: bold;
+    font-size: 13px;
     cursor: default;
 }
 
 .wizard>.steps .done a,
 .wizard>.steps .done a:hover,
 .wizard>.steps .done a:active {
-    background: #86c03f;
+    background: #2d5001;
     color: #fff;
+    font-size: 13px;
 }
 
 .wizard>.steps .error a,
@@ -1089,8 +1093,8 @@ Wizard
 .wizard>.content>.body label {
     display: inline-block;
     margin-bottom: 0.5em;
-    font-size: 12px !important;
-    color: #163b66 !important
+    font-size: 14px !important;
+    color: #163b66 !important;
 }
 
 .wizard>.content>.body label.error {
@@ -1116,6 +1120,7 @@ Wizard
 .wizard>.actions>ul {
     display: inline-block;
     text-align: right;
+    margin-right: 23px;
 }
 
 .wizard>.actions>ul>li {
@@ -1127,9 +1132,8 @@ Wizard
 }
 
 .wizard>.actions a,
-.wizard>.actions a:hover,
 .wizard>.actions a:active {
-    font-size: 14px;
+    /*  font-size: 14px;
     color: #d1a23c;
     background: #163b66;
     display: block;
@@ -1137,7 +1141,15 @@ Wizard
     text-decoration: none;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
-    border-radius: 5px;
+    border-radius: 5px;*/
+    border: 1px solid #11243a;
+    padding: 7px 24PX 7px 24PX;
+    font-size: 14px;
+}
+
+.wizard>.actions a:hover {
+    background: #11243a !important;
+    color: #d19e4f !important
 }
 
 .wizard>.actions .disabled a,
@@ -1271,6 +1283,7 @@ Tabcontrol
 #souscription-form {
     background: #F9F9F9;
     padding: 25px;
+    margin-top: 15px;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
     height: 571px !important;
 }
@@ -1300,20 +1313,47 @@ fieldset {
 #souscription-form input[type="text"],
 #souscription-form input[type="email"],
 #souscription-form input[type="tel"],
-#souscription-form input[type="url"],
-#souscription-form input[type="number"],
-#souscription-form input[type="date"] {
-    width: 100%;
-    border: 1px inset rgb(22, 59, 102);
+#souscription-form input[type="url"] {
+    width: 97%;
+    /*border: 1px inset rgba(22, 59, 102, 0.57);*/
     background: #FFF;
     margin: 0 0 5px !important;
-    padding: 7px !important;
-    border-radius: 3px !important
+    border-radius: 3px !important;
+    box-shadow: 0 0 8px #666666c2;
+    padding: 9px !important;
+}
+
+#souscription-form input[type="checkbox"] {
+    transform-origin: right;
+    transform: scale(1.5);
+}
+
+#souscription-form input[type="number"],
+#souscription-form input[type="date"] {
+    width: 97%;
+    /*border: 1px inset rgba(22, 59, 102, 0.57);*/
+    background: #FFF;
+    margin: 0 0 5px !important;
+    border-radius: 3px !important;
+    box-shadow: 0 0 8px #666666c2;
+    padding: 5px !important;
+}
+
+#souscription-form select {
+    width: 97%;
+    /* border: 1px inset rgba(22, 59, 102, 0.57);*/
+    background: #FFF;
+    margin: 0 0 5px !important;
+    border-radius: 3px !important;
+    box-shadow: 0 0 8px #666666c2;
+    padding: 5px !important;
 }
 
 .garantie-val {
-    width: 125px !important;
+    width: 101px !important;
     text-align: center !important;
+    position: relative;
+    left: -25px;
 }
 
 .garantie-header {
@@ -1326,9 +1366,9 @@ fieldset {
 
 .prime-sector img {
     width: 63%;
-    height: 207px;
+    height: 223px;
     position: absolute;
-    margin: 13px 77px 0 172px;
+    margin: 2px 77px 0 172px;
 }
 
 #prime-value {
@@ -1339,6 +1379,14 @@ fieldset {
     color: #d0a13b;
     z-index: 1;
     font-weight: bolder !important;
+}
+
+.total-text {
+    position: relative;
+    top: 150px;
+    left: 286px;
+    z-index: 1;
+    color: #ffffff;
 }
 
 .conditions-row h3 {
@@ -1360,6 +1408,14 @@ fieldset {
 
 .decompte-tab td input {
     text-align: center;
+    width: 80% !important;
+    margin: auto !important;
+}
+
+.decompte-tab td select {
+    text-align: center;
+    width: 80% !important;
+    margin: auto !important;
 }
 
 .decompte-tab>caption+thead>tr:first-child>th,
@@ -1386,48 +1442,9 @@ fieldset {
     font-weight: bold
 }
 
-
-/*.btn-warning {
-    color: #ffffff;
-    background-color: #f6bb42;
-    width: 16% !important;
-    /* position: relative; */
-
-
-/* margin: auto;
-    margin-top: 111px;
-    position: relative;
-    left: 31px;
-    margin-left: 23px;
-}*/
-
-.total-text {
-    position: relative;
-    top: 169px;
-    left: 298px;
-    z-index: 1;
-    color: #ffffff;
-}
-
 .garantie-label {
     padding-right: 54px !important
 }
-
-select {
-    width: 100% !important;
-    border: 1px solid #7c91a9 !important;
-    background: #FFF;
-    margin: 0 0 5px !important;
-    padding: 5px !important;
-    border-radius: 3px !important;
-    font-size: 12px
-}
-
-
-/*.val_input {
-    text-align: center;
-    width: 99px !important;
-}*/
 
 #souscription-form input[type="text"]:hover,
 #souscription-form input[type="email"]:hover,
@@ -1517,9 +1534,9 @@ select {
 
 .total-input {
     position: relative;
-    top: 159px;
-    /*margin: auto !important;*/
-    left: 233px !important;
+    top: 144px;
+    /* margin: auto !important; */
+    left: 237px !important;
     width: 50% !important;
     text-align: center;
     background: #011221 !important;
@@ -1528,4 +1545,8 @@ select {
     font-weight: bold;
     font-size: 39px !important;
     z-index: 1;
+}
+
+z-index: 1;
+
 }
