--- a/assets/skin/default_skin/css/theme.css
+++ b/assets/skin/default_skin/css/theme.css
@@ -37,6 +37,27 @@
     /* Black w/ opacity */
 }
 
+.data-panel {
+    margin-left: -58px !important;
+    width: 112% !important;
+}
+
+.commissions {
+    float: right;
+    margin-top: -19px;
+    border: 1px dotted #11243a;
+    padding: 5px 62px 5px 20px;
+    margin-right: -58px;
+    border-radius: 10px;
+    color: #11243a;
+}
+
+.com-sum {
+    font-weight: bold !important;
+    font-size: 21px!important;
+    color: green !important;
+}
+
 .documents-content {
     background: #ffffff;
     height: auto !important;
@@ -105,6 +126,14 @@
 
 .primes-tab th td {
     border: 1px solid black
+}
+
+.primes-tab {
+    width: 100%;
+    max-width: 100%;
+    margin: auto !important;
+    margin: 61px 0 61px 43px !important;
+    padding: 7px !important;
 }
 
 .animated-delay,
@@ -896,9 +925,10 @@ Copyright (c) 2014 Daniel Eden
 /* Load font library */
 
 @font-face {
-    font-family: "AdminDesigns";
-    src: url("../../../fonts/admindesigns/admindesigns.eot");
-    src: url("../../../fonts/admindesigns/admindesigns.eot?#iefix") format("embedded-opentype"), url("../../../fonts/admindesigns/admindesigns.woff") format("woff"), url("../../../fonts/admindesigns/admindesigns.ttf") format("truetype"), url("../../../fonts/admindesigns/admindesigns.svg#admindesigns") format("svg");
+    font-family: 'Myriad Pro', sans-serif;
+    /*font-family: "AdminDesigns";*/
+    /*src: url("../../../fonts/admindesigns/admindesigns.eot");
+    src: url("../../../fonts/admindesigns/admindesigns.eot?#iefix") format("embedded-opentype"), url("../../../fonts/admindesigns/admindesigns.woff") format("woff"), url("../../../fonts/admindesigns/admindesigns.ttf") format("truetype"), url("../../../fonts/admindesigns/admindesigns.svg#admindesigns") format("svg");*/
     font-weight: normal;
     font-style: normal;
 }
@@ -12533,7 +12563,7 @@ input[type="date"],
 input[type="time"],
 input[type="datetime-local"],
 input[type="month"] {
-    line-height: 39px;
+    /* line-height: 39px;*/
     line-height: 1.49 \0;
 }
 
@@ -15055,8 +15085,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination>.active>span:focus {
     z-index: 2;
     color: #ffffff;
-    background-color: #4a89dc;
-    border-color: #4a89dc;
+    background-color: #11243a !important;
+    /*border-color: #4a89dc;*/
     cursor: default;
 }
 
@@ -24882,7 +24912,8 @@ body.sb-l-m .navbar-brand {
 
 #sidebar_left {
     /*background-color: #30363e;*/
-    background-color: #163b66 !important
+    /*background-color: #163b66 !important*/
+    background-color: #11243a !important;
 }
 
 
