--- a/assets/skin/default_skin/css/navbar.css
+++ b/assets/skin/default_skin/css/navbar.css
@@ -1,6 +1,6 @@
 .navbar-brand {
-    background: url(../../../img/logos/LogoSaham1.jpg) center no-repeat;
+    background: url(../../../img/logos/logo-footer.png) center no-repeat;
     background-size: 49%;
     width: 100%;
-    margin-left: -60px;
+    margin-left: -41px;
 }
