--- a/assets/skin/default_skin/css/theme.css
+++ b/assets/skin/default_skin/css/theme.css
@@ -59,9 +59,20 @@
 }
 
 .documents-content {
-    background: #ffffff;
-    height: auto !important;
-    width: auto !important;
+    background: #727c8400 !important;
+    height: 100% !important;
+    width: 100% !important;
+    overflow-y: scroll;
+    margin-top: -40px;
+}
+
+.documents-content::-webkit-scrollbar {
+    background: red !important
+}
+
+.owl-carousel .owl-item img {
+    margin-left: 16em !important;
+    width: 39% !important
 }
 
 .modal-content {
@@ -132,8 +143,20 @@
     width: 100%;
     max-width: 100%;
     margin: auto !important;
-    margin: 61px 0 61px 43px !important;
+    margin: 0 !important;
     padding: 7px !important;
+    border-collapse: separate;
+    border-spacing: 11px
+}
+
+.recap-decompte {
+    position: absolute !important;
+    top: 278px !important;
+    left: 23px !important;
+}
+
+#bonus_sur_rc {
+    width: 62px !important
 }
 
 .animated-delay,
@@ -22011,12 +22034,11 @@ body.sidebar-collapsed #sidebar:before {
     margin-bottom: 0;
     height: 60px;
     color: #666;
-    background-color: #FFF;
+    background-color: #64707e;
     border-radius: 0;
-    border: 0;
     border-bottom: 0;
     box-shadow: 0 1px 0 0 #e0e0e0;
-    /* Navbar shadow option - Only allowed on default white navbar */
+    border-bottom: 1px solid #f2d19e;
 }
 
 .navbar.navbar-shadow {
@@ -22041,7 +22063,7 @@ body.sidebar-collapsed #sidebar:before {
 }
 
 .navbar .nav>li>a {
-    color: #666;
+    color: #d19e4f;
     font-size: 13px;
     font-weight: 600;
     padding-top: 20px;
@@ -22461,8 +22483,7 @@ body.sidebar-collapsed #sidebar:before {
     width: 230px;
     height: 60px;
     margin-right: 10px;
-    background-color: transparent;
-    /* Logo */
+    background-color: #11243aa6;
 }
 
 .navbar-branding .navbar-brand {
@@ -22582,6 +22603,7 @@ body.sb-top #toggle_sidemenu_t {
     box-shadow: none;
     border-radius: 20px;
     border-color: #EEE;
+    display: none !important
 }
 
 .navbar-form.navbar-search input:focus {
@@ -24922,7 +24944,8 @@ body.sb-l-m .navbar-brand {
 .sidebar-menu .sidebar-label {
     /*color: #70829a;*/
     color: #d19e4f;
-    font-weight: bold !important
+    font-weight: bold !important;
+    text-decoration: underline
 }
 
 
