--- a/assets/skin/default_skin/css/accueil.css
+++ b/assets/skin/default_skin/css/accueil.css
@@ -152,3 +152,40 @@ body {
 .f6 {
     background: url(../../../img/patterns/6.jpg) center no-repeat;
 }
+
+.admin-right {
+    background-color: #0e1938 !important;
+    height: 618px !important;
+    margin-left: -4px;
+    transition: .5s all ease-in-out;
+    cursor: pointer
+}
+
+.admin-right:hover {
+    box-shadow: inset 0 0 0 10px #ffffff;
+}
+
+.profil-avatar {
+    color: #ffffff;
+    margin: 37%;
+    margin-top: 193px;
+    font-size: 198px;
+    z-index: -2;
+    filter: opacity(0.5);
+}
+
+.profil-title {
+    position: absolute;
+    top: 65%;
+    left: 38%;
+    font-size: 23px;
+    cursor: pointer;
+    text-decoration: underline;
+    transition: .5s all ease-in-out;
+    color: #ffffff
+}
+
+.profil-title :hover {
+    box-shadow: inset 0 0 0 10px #ffffff;
+    color: green !important
+}
