--- a/assets/skin/default_skin/css/connexion.css
+++ b/assets/skin/default_skin/css/connexion.css
@@ -10,3 +10,10 @@
 .forgot-pw-logo {
     width: 54% !important;
 }
+
+.loader {
+    position: relative;
+    left: 43%;
+    width: 14%;
+    top: 52px;
+}
