--- a/controllers/assets/skin/default_skin/css/theme.css
+++ b/controllers/assets/skin/default_skin/css/theme.css
@@ -11144,7 +11144,7 @@ hr {
 }
 
 hr.alt {
-    border-top: 1px dashed #cccccc;
+    border-top: 1px dashed #11243a !important;
 }
 
 hr.short {
@@ -15084,7 +15084,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
     padding: 5px 12px;
     line-height: 1.49;
     text-decoration: none;
-    color: #4a89dc;
+    color: #11243a;
     background-color: #ffffff;
     border: 1px solid #dddddd;
     margin-left: -1px;
@@ -27847,8 +27847,8 @@ fieldset[disabled] .btn-primary.active {
 .btn-success:active,
 .btn-success.active,
 .open>.dropdown-toggle.btn-success {
-    color: #ffffff;
-    background-color: #56c046;
+    background-color: #11243a;
+    color: #d19e4f;
     border-color: rgba(0, 0, 0, 0.05);
 }
 
